testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__indexed-by-delete-category.snap
---
source: indexes.sqltest
expression: DELETE FROM products INDEXED BY idx_products_category WHERE category = 'discontinued';
info:
  statement_type: DELETE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_category (category=?)
