testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__indexed-by-update-price.snap
---
source: indexes.sqltest
expression: UPDATE products INDEXED BY idx_products_price SET stock_qty = 0 WHERE price < 1;
info:
  statement_type: UPDATE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_price (price<?)
