testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__join-with-index.snap
---
source: indexes.sqltest
expression: |-
  SELECT o.id, o.order_date, i.quantity
      FROM orders o
      JOIN inventory i ON o.id = i.product_id
      WHERE o.customer_id = 100;
info:
  statement_type: SELECT
  tables:
  - inventory
  - o.id
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH o USING INDEX idx_orders_customer_date (customer_id=?)
`--SCAN inventory AS i USING COVERING INDEX idx_inventory_covering
