testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__or-same-column.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, severity
      FROM events
      WHERE event_type = 'ERROR' OR event_type = 'CRITICAL';
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX OR events (idx_events_type, idx_events_type)
