testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__simple-index-with-filter.snap
---
source: indexes.sqltest
expression: SELECT id, name, price FROM products WHERE sku = 'ABC123' AND stock_qty > 0;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_sku (sku=?)
